Adicionada segunda página e README.md

--- a/index.html
+++ b/index.html
@@ -37,8 +37,21 @@
         <mark>Windows 7 ou anterior</mark>:
         <li>Abra Iniciar > Programas > Acessórios > Bloco de Notas</li>
     </ul>
+    <form method="get">
+        <p>O que mais queria ver:</p>
+        <label>HTML</label><input type="checkbox" name="conteudo[]" value="HTML"><br>
+        <label>CSS</label> <input type="checkbox" name="conteudo[]" value="css"> <br>
+        <label>JAVASCRIPT</label> <input type="checkbox" name="conteudo" value="javascript">
+        <p>Você indicaria o site?</p>
+        <label>Sim</label> <input type="radio" name="indica" value="true">
+        <label>Não</label> <input type="radio" name="indica" value="false">
+        <br>
+        <button type="submit">ENVIAR</button>
+    </form>
     <h5>Conteúdo da w3schools</h5>
     <h6>veja mais em <a href="https://www.w3schools.com/html/default.asp" target="_blank">w3schools</a> <small><- acesse o link</small></h6>
+    <a href="/src/pagina2.html">Página 2</a>
+    <hr>
     <del>Marcos Vinicius Guimarães</del>
 </body>
 </html>
