--- a/src/pagina2.html
+++ b/src/pagina2.html
@@ -18,7 +18,6 @@
         <label>Sim</label><input type="radio" name="escolha" value="true">
         <label>Não</label><input type="radio" name="escolha" value="false">
         <br>
-        <p><Select></Select></p>
         <label for="selecao">Selecione:</label>
         <select name="seleção" id="selecao">
             <option value="calabresa">Calabresa</option>
@@ -49,6 +48,13 @@
     </form>
     <br>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d825.1268141561411!2d-48.29242381397714!3d-10.342947158820111!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x933b3b09720aa4ff%3A0x7bc4ed9e6433fb6e!2sUnitech%20Sistemas!5e0!3m2!1spt-BR!2sbr!4v1704206345761!5m2!1spt-BR!2sbr" width="250" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <br>
+    <img src="https://2.bp.blogspot.com/-GXRWdTDSrvM/VrsxjZnFAqI/AAAAAAAAReI/Ua_hnASShHI/s1600/wow_legion.jpg" title="Você não está preparado" alt="Imagem world of warcraft legion" width="500px">
+    <br>
+    <audio autoplay controls>
+        <source src="../audio/wind_of_change_-_scorpion_.mp3">
+        Não suportado pelo navegador
+    </audio>
     <br>
     <a href="../index.html">Página inicial</a>
 </body>
