--- a/src/pagina2.html
+++ b/src/pagina2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -57,5 +57,8 @@
     </audio>
     <br>
     <a href="../index.html">Página inicial</a>
+    <br>
+    <a href="./pagina3.html">Página 3</a>
+    <hr>
 </body>
 </html>
