--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </form>
     <h5>Conteúdo da w3schools</h5>
     <h6>veja mais em <a href="https://www.w3schools.com/html/default.asp" target="_blank">w3schools</a> <small><- acesse o link</small></h6>
-    <a href="/src/pagina2.html">Página 2</a>
+    <a href="./src/pagina2.html">Página 2</a>
     <hr>
     <del>Marcos Vinicius Guimarães</del>
 </body>
