--- a/src/pagina2.html
+++ b/src/pagina2.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página 2</title>
+    <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
     <header>
