--- a/src/pagina3.html
+++ b/src/pagina3.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PÁGINA 3</title>
+    <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
     <header>
@@ -64,7 +65,7 @@
             const progress = document.getElementById("progress");
             if(progress){
                 const intervalo = setInterval(()=>{progress.value +=1;
-                if(progress.value >= 90){
+                if(progress.value >= 100){
                     clearInterval(intervalo);
                 }
             },100);
