Alterado Navegaçao tag NAV

--- a/src/pagina3.html
+++ b/src/pagina3.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PÁGINA 3</title>
-    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="../assets/style.css">
 </head>
 <body>
     <header>
-
+        <nav id="navegacao">
+            <ul>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="./pagina2.html">Forms</a></li>
+                <li><a href="./pagina3.html">Testes</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <!-- Summary e th usados para acessibilidade -->
@@ -74,10 +80,6 @@
         <p>Essa é a tag progress usando javascript, já a tag meter está logo abaixo</p>
         <meter value="2" min="0" max="10"></meter>
         <br>
-        <br>
-        <a href="../index.html">Página inicial</a>
-        <br>
-        <a href="./pagina2.html">Página 3</a>
     </main>
     <footer>
         
