--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 </head>
 <body>
     <header>
-
+        <nav id="navegacao">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="./src/pagina2.html">Forms</a></li>
+                <li><a href="./src/pagina3.html">Testes</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <h1>Introdução HTML</h1>
@@ -56,7 +62,6 @@
         </form>
         <h5>Conteúdo da w3schools</h5>
         <h6>veja mais em <a href="https://www.w3schools.com/html/default.asp" target="_blank">w3schools</a> <small><- acesse o link</small></h6>
-        <a href="./src/pagina2.html">Página 2</a>
         <hr>
         <del>Marcos Vinicius Guimarães</del>
     </main>
