--- a/src/pagina2.html
+++ b/src/pagina2.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página 2</title>
-    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="../assets/style.css">
 </head>
 <body>
     <header>
-
+        <nav id="navegacao">
+            <ul>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="./pagina2.html">Forms</a></li>
+                <li><a href="./pagina3.html">Testes</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <h1 contenteditable>Testes usando Forms</h1>
@@ -79,9 +85,6 @@
             Não suportado pelo navegador
         </audio>
         <br>
-        <a href="../index.html">Página inicial</a>
-        <br>
-        <a href="./pagina3.html">Página 3</a>
         <hr>
     </main>
     <footer>
