Adicionada páginas Cores.html

--- a/index.html
+++ b/index.html
@@ -15,55 +15,58 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="./src/pagina2.html">Forms</a></li>
                 <li><a href="./src/pagina3.html">Testes</a></li>
+                <li><a href="./src/Cores.html">Cores</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <h1>Introdução HTML</h1>
-        <hr>
-        <h2>O que é HTML?</h2>
-        <ul>
-            <li>HTML significa <strong>linguagem de marcação de hipertexto</strong></li>
-            <li>HTML é a linguagem de marcação padrão para criação de páginas da Web</li>
-            <li>HTML descreve a estrutura de uma página da Web</li>
-            <li>HTML consiste em uma série de elementos</li>
-            <li>Os elementos HTML informam ao navegador como exibir o conteúdo</li>
-            <li>Os elementos HTML rotulam partes do conteúdo como <i>“este é um título”, “este é um parágrafo”, “este é um link”</i>, etc.</li>
-        </ul>
-        <p>
-            <blockquote>HTML é a linguagem de marcação padrão para páginas da Web.Com HTML você pode criar seu próprio site.HTML é fácil de aprender 
-                - <u>você vai se divertir!</u></blockquote>
-        </p>
-        <h3>Aprenda HTML usando o bloco de notas ou TextEdit</h3>
-        <p>
-            As páginas da Web podem ser criadas e modificadas usando editores HTML profissionais.
-            Porém, para aprender HTML recomendamos um editor de texto simples como o Notepad (PC) ou TextEdit (Mac).
-            Acreditamos que usar um editor de texto simples é uma boa maneira de aprender HTML.
-            Siga as etapas abaixo para criar sua primeira página da web com o Bloco de notas ou TextEdit.
-        </p>
-        <h4>Usando Bloco de notas</h4>
-        <ul>
-            <li>Passo 1: Abra o Bloco de Notas (PC)</li>
-            <mark>Windows 8 ou posterior</mark>:
-            <li>Abra a tela inicial (o símbolo da janela no canto inferior esquerdo da tela). Digite Bloco de Notas.</li>
-            <mark>Windows 7 ou anterior</mark>:
-            <li>Abra Iniciar > Programas > Acessórios > Bloco de Notas</li>
-        </ul>
-        <form method="get">
-            <p>O que mais queria ver:</p>
-            <label>HTML</label><input type="checkbox" name="conteudo[]" value="HTML"><br>
-            <label>CSS</label> <input type="checkbox" name="conteudo[]" value="css"> <br>
-            <label>JAVASCRIPT</label> <input type="checkbox" name="conteudo" value="javascript">
-            <p>Você indicaria o site?</p>
-            <label>Sim</label> <input type="radio" name="indica" value="true">
-            <label>Não</label> <input type="radio" name="indica" value="false">
-            <br>
-            <button type="submit">ENVIAR</button>
-        </form>
-        <h5>Conteúdo da w3schools</h5>
-        <h6>veja mais em <a href="https://www.w3schools.com/html/default.asp" target="_blank">w3schools</a> <small><- acesse o link</small></h6>
-        <hr>
-        <del>Marcos Vinicius Guimarães</del>
+        <div id="container">
+            <h1>Introdução HTML</h1>
+            <hr>
+            <h2>O que é HTML?</h2>
+            <ul>
+                <li>HTML significa <strong>linguagem de marcação de hipertexto</strong></li>
+                <li>HTML é a linguagem de marcação padrão para criação de páginas da Web</li>
+                <li>HTML descreve a estrutura de uma página da Web</li>
+                <li>HTML consiste em uma série de elementos</li>
+                <li>Os elementos HTML informam ao navegador como exibir o conteúdo</li>
+                <li>Os elementos HTML rotulam partes do conteúdo como <i>“este é um título”, “este é um parágrafo”, “este é um link”</i>, etc.</li>
+            </ul>
+            <p>
+                <blockquote>HTML é a linguagem de marcação padrão para páginas da Web.Com HTML você pode criar seu próprio site.HTML é fácil de aprender 
+                    - <u>você vai se divertir!</u></blockquote>
+            </p>
+            <h3>Aprenda HTML usando o bloco de notas ou TextEdit</h3>
+            <p>
+                As páginas da Web podem ser criadas e modificadas usando editores HTML profissionais.
+                Porém, para aprender HTML recomendamos um editor de texto simples como o Notepad (PC) ou TextEdit (Mac).
+                Acreditamos que usar um editor de texto simples é uma boa maneira de aprender HTML.
+                Siga as etapas abaixo para criar sua primeira página da web com o Bloco de notas ou TextEdit.
+            </p>
+            <h4>Usando Bloco de notas</h4>
+            <ul>
+                <li>Passo 1: Abra o Bloco de Notas (PC)</li>
+                <mark>Windows 8 ou posterior</mark>:
+                <li>Abra a tela inicial (o símbolo da janela no canto inferior esquerdo da tela). Digite Bloco de Notas.</li>
+                <mark>Windows 7 ou anterior</mark>:
+                <li>Abra Iniciar > Programas > Acessórios > Bloco de Notas</li>
+            </ul>
+            <form method="get">
+                <p>O que mais queria ver:</p>
+                <label>HTML</label><input type="checkbox" name="conteudo[]" value="HTML"><br>
+                <label>CSS</label> <input type="checkbox" name="conteudo[]" value="css"> <br>
+                <label>JAVASCRIPT</label> <input type="checkbox" name="conteudo" value="javascript">
+                <p>Você indicaria o site?</p>
+                <label>Sim</label> <input type="radio" name="indica" value="true">
+                <label>Não</label> <input type="radio" name="indica" value="false">
+                <br>
+                <button type="submit">ENVIAR</button>
+            </form>
+            <h5>Conteúdo da w3schools</h5>
+            <h6>veja mais em <a href="https://www.w3schools.com/html/default.asp" target="_blank">w3schools</a> <small><- acesse o link</small></h6>
+            <hr>
+            <del>Marcos Vinicius Guimarães</del>
+        </div>
     </main>
     <footer>
 
