--- a/src/pagina3.html
+++ b/src/pagina3.html
@@ -13,6 +13,7 @@
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="./pagina2.html">Forms</a></li>
                 <li><a href="./pagina3.html">Testes</a></li>
+                <li><a href="./Cores.html">Cores</a></li>
             </ul>
         </nav>
     </header>
@@ -82,7 +83,7 @@
                 <img src="https://2.bp.blogspot.com/-GXRWdTDSrvM/VrsxjZnFAqI/AAAAAAAAReI/Ua_hnASShHI/s1600/wow_legion.jpg" title="Você não está preparado" alt="Imagem world of warcraft legion" id="cover">
            </picture>
         </div>
-        <p><code>Object-fit: fill</code></p>
+        <p><code>Object-fit: fill</code> (Valor padrão)</p>
         <div class="exemplo-img">
            <picture>
                 <img src="https://2.bp.blogspot.com/-GXRWdTDSrvM/VrsxjZnFAqI/AAAAAAAAReI/Ua_hnASShHI/s1600/wow_legion.jpg" title="Você não está preparado" alt="Imagem world of warcraft legion" id="fill">
