--- a/src/pagina2.html
+++ b/src/pagina2.html
@@ -13,6 +13,7 @@
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="./pagina2.html">Forms</a></li>
                 <li><a href="./pagina3.html">Testes</a></li>
+                <li><a href="./Cores.html">Cores</a></li>
             </ul>
         </nav>
     </header>
