Adicionado conteudo na página

--- a/src/Cores.html
+++ b/src/Cores.html
@@ -26,11 +26,46 @@
             <li>Hexadecimal</li>
             <li>HSL e HSLA</li>
         </ul>
+        <h3>Cores Predefinidas</h3>
         <p>Os browsers suportam 140 <a href="https://www.w3schools.com/colors/colors_names.asp" target="_blank">
             cores pré definidas.</a>
+            Ex: <code>color: red;</code>
         </p>
+        <h3>RGB</h3>
         <p>RGB representa Red, Green e Blue <code>rgb(255,0,0);</code></p>
+        <h3>RGBA</h3>
         <p>Já o RGBA adiciona um nível de transparência <code>rgba(255,255,18,0.1);</code></p>
+        <h3>Hexadecimal</h3>
+        <p>Já o Hexadecimal é composto pelo sinal <code>#</code> os dois primeiros caracteres representam a intensidade da cor vermelha
+            os dois do meio representam a cor verde e os dois últimos a cor azul. EX: <code>#f1f1f1</code>
+        </p>
+        <p>Para adicionar transparência no hexadecimal só adicionar 2 digitos ao final com valores entre 00 e ff EX: <code>#0000FF3F</code></p>
+        <h3>HSL</h3>
+        <p>
+            Hue(matiz) é o grau na roda de cores (de 0 a 360 graus)
+            <ul>
+                <li>0 ou 360 é vermelho</li>
+                <li>120 é verde</li>
+                <li>240 é azul</li>
+            </ul>
+        </p>
+        <p>Saturation(saturação) valor percentual
+            <ul>
+                <li>0% é preto</li>
+                <li>100% é branco</li>
+            </ul>
+        </p>
+        <p>
+            Lightness(luminosidade) luminosidade da cor
+            <ul>
+                <li>0% é preto</li>
+                <li>100% é branco</li>
+            </ul>
+        </p>
+        <p>EX: <code>color: hsl(45,90%,20%);</code></p>
+        <p>Já com o HSLA é possível colocar um nível de transparência que aceia valores de 0.0 até 1.
+            EX: <code>hsla(45,100%,50%,0.5);</code>
+        </p>
 
     </main>
     <footer>
