--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
                 <li><a href="./src/pagina2.html">Forms</a></li>
                 <li><a href="./src/pagina3.html">Testes</a></li>
                 <li><a href="./src/Cores.html">Cores</a></li>
+                <li><a href="./src/imagem.html">Imagens</a></li>
+                <li><a href="./src/background.html">Background</a></li>
             </ul>
         </nav>
     </header>
