--- a/src/background.html
+++ b/src/background.html
@@ -7,7 +7,7 @@
     <title>Cores</title>
     <link rel="stylesheet" href="../assets/style.css">
 </head>
-<body class="back-night texto-branco">
+<body class="night">
     <header>
         <nav id="navegacao">
             <ul>
@@ -15,6 +15,8 @@
                 <li><a href="./pagina2.html">Forms</a></li>
                 <li><a href="./pagina3.html">Testes</a></li>
                 <li><a href="./Cores.html">Cores</a></li>
+                <li><a href="./imagem.html">Imagens</a></li>
+                <li><a href="./background.html">Background</a></li>
             </ul>
         </nav>
     </header>
@@ -43,6 +45,28 @@
     <div class="caixa2 back-camada" >
 
     </div>
+    <br>
+    <h1><code>Background-repeat: repeat-x</code></h1>
+    <div class="caixa3 borda repeat-x" >
+
+    </div>
+    <br>
+    <h1><code>Background-repeat: repeat-y</code></h1>
+    <div class="caixa3 borda repeat-y" >
+
+    </div>
+    <br>
+    <h1><code>Background-repeat: space</code></h1>
+    <div class="caixa3 borda space" >
+
+    </div>
+    <br>
+    <h1><code>Background-repeat: round</code></h1>
+    <div class="caixa3 borda round" >
+
+    </div>
+    <br>
+
    </main>
     <footer>
 
