--- a/src/pagina3.html
+++ b/src/pagina3.html
@@ -14,6 +14,8 @@
                 <li><a href="./pagina2.html">Forms</a></li>
                 <li><a href="./pagina3.html">Testes</a></li>
                 <li><a href="./Cores.html">Cores</a></li>
+                <li><a href="./imagem.html">Imagens</a></li>
+                <li><a href="./background.html">Background</a></li>
             </ul>
         </nav>
     </header>
